Made changes to fix alignment

--- a/listings.css
+++ b/listings.css
@@ -30,7 +30,9 @@
 }
 
 .picture-container {
-    margin: auto;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
 }
 
 .picture-container > .listing-pic {
@@ -40,6 +42,7 @@
 .info-container {
     padding: 0px 15px;
     text-align: left;
+    width: 50%;
 }
 
 .price-tag {
